2011-07-07  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/pathconf.c (distinguish_extX): New function.
	(__statfs_link_max): Use it to dostinguish between ext2/3 and ext4.
	The latter has a higher limit.  Take additional parameter to pass to
	the new function.
	(__pathconf): Pass file to __statfs_link_max.
	* sysdeps/unix/sysv/linux/fpathconf.c (__fpathconf): Pass fd to
	__statfs_link_max.
	* sysdeps/unix/sysv/linux/pathconf.h: Adjust prototype of
	__statfs_link_max.

	[BZ #12868]
	* sysdeps/unix/sysv/linux/linux_fsinfo.h: Define Lustre constants.
	* sysdeps/unix/sysv/linux/internal_statvfs.c (__statvfs_getflags):
	Handle Lustre.
	* sysdeps/unix/sysv/linux/pathconf.c (__statfs_link_max): Likewise.
	(__statfs_filesize_max): Likewise.
	Patch mostly by Andreas Dilger <adilger@whamcloud.com>.

2011-07-05  Andreas Jaeger  <aj@suse.de>

	* resolv/res_comp.c (dn_skipname): Remove unused variable.

2011-07-06  Marek Polacek  <mpolacek@redhat.com>

	* nis/nss_nisplus/nisplus-spwd.c (_nss_nisplus_setspent): Honour the
	`status' variable.
	* nis/nss_nisplus/nisplus-ethers.c (_nss_nisplus_setetherent):
	Likewise.

2011-07-04  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (strop-tests): Add strncat.
	* string/test-strncat.c: New file.

2011-06-30  Marek Polacek  <mpolacek@redhat.com>

	* iconvdata/johab.c: Don't inline `johab_sym_hanja_to_ucs' function.

2011-06-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/s390/s390-64/Makefile ($(inst_gconvdir)/gconv-modules):
	Copy rule from iconvdata/Makefile.

2011-07-06  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12922]
	* posix/getopt.c (_getopt_internal_r): When "W;" is in short options
	but no long options are defined, just return 'W'.

2011-06-22  Marek Polacek  <mpolacek@redhat.com>

	[BZ #9696]
	* stdlib/strtod_l.c (round_and_return): Set ERANGE instead of EDOM.

2011-07-06  Ulrich Drepper  <drepper@gmail.com>

	* inet/getnetgrent_r.c (internal_getnetgrent_r): Fix check for known
	netgroups to read.